--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/socialite": "^5.23",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
+        "php-flasher/flasher-laravel": "^2.1",
         "wire-elements/pro": "^5.0"
     },
     "require-dev": {
