--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
         "php-flasher/flasher-laravel": "^2.1",
+        "power-components/livewire-powergrid": "^6.5",
         "wire-elements/pro": "^5.0"
     },
     "require-dev": {
