--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "elegantly/livewire-modal": "*",
         "laravel-lang/common": "^6.7",
         "laravel/framework": "^12.0",
         "laravel/socialite": "^5.23",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
         "php-flasher/flasher-laravel": "^2.1",
-        "power-components/livewire-powergrid": "^6.5",
-        "wire-elements/pro": "^5.0"
+        "power-components/livewire-powergrid": "^6.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -81,12 +81,6 @@
             "php-http/discovery": true
         }
     },
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://wire-elements-pro.composer.sh"
-        }
-    ],
     "minimum-stability": "stable",
     "prefer-stable": true
 }
