--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "elegantly/livewire-modal": "*",
+        "elegantly/livewire-modal": "^1.0",
         "laravel-lang/common": "^6.7",
         "laravel/framework": "^12.0",
         "laravel/socialite": "^5.23",
