--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
         "php-flasher/flasher-laravel": "^2.1",
-        "power-components/livewire-powergrid": "^6.5"
+        "power-components/livewire-powergrid": "^6.5",
+        "spatie/laravel-permission": "^6.21"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
