--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/socialite": "^5.23",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
+        "masmerise/livewire-toaster": "^2.8",
         "mcamara/laravel-localization": "^2.3",
         "opcodesio/log-viewer": "^3.19",
         "php-flasher/flasher-laravel": "^2.1",
@@ -24,6 +25,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "laravel/boost": "^1.0",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.41",
