--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "livewire/livewire": "^3.6",
         "masmerise/livewire-toaster": "^2.8",
         "mcamara/laravel-localization": "^2.3",
-        "opcodesio/log-viewer": "*",
+        "opcodesio/log-viewer": "^3.19",
         "power-components/livewire-powergrid": "^6.5",
         "spatie/laravel-permission": "^6.21"
     },
