Add captcha configuration and integrate `mews/captcha` package in application config.

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "livewire/livewire": "^3.6",
         "masmerise/livewire-toaster": "^2.8",
         "mcamara/laravel-localization": "^2.3",
+        "mews/captcha": "^3.4",
         "opcodesio/log-viewer": "^3.19",
         "power-components/livewire-powergrid": "^6.5",
         "spatie/laravel-permission": "^6.21"
