--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "QuickPanel\\Platform\\": "packages/quickpanel/platform/src/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
