--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "quickpanel/platform": "*",
         "elegantly/livewire-modal": "^1.0",
         "laravel-lang/common": "^6.7",
         "laravel/framework": "^12.0",
@@ -78,6 +79,15 @@
             "dont-discover": []
         }
     },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "packages/quickpanel/platform",
+            "options": {
+                "symlink": true
+            }
+        }
+    ],
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
