--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,14 @@
         }
     },
     "scripts": {
+        "setup": [
+            "composer install",
+            "@php -r \"! file_exists('.env') || copy('.env.example', '.env');\"",
+            "@php artisan key:generate",
+            "@php artisan migrate --force",
+            "npm install",
+            "npm run build"
+        ],
         "post-autoload-dump": [
             "@php artisan config:clear",
             "@php artisan clear-compiled",
